# futdados

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt  run.py
scripts/: calibrate.py
src/betstats/: __init__.py  config.py  models.py  output.py  pipeline.py  trace.py  validate.py
src/betstats/data/: api_football.py  cache.py  demo.py  elo.py  espn.py  i18n.py  provider.py
src/betstats/features/: angles.py  anomalies.py  attack.py  base.py  betting.py  defense.py  engine.py  markets.py  results.py  temporal.py
src/betstats/llm/: api_backend.py  cli_backend.py  client.py  complete.py  jsonutil.py  prompts.py  ranker.py  writer.py
src/betstats/rules/: base.py  brasileirao.py  world_cup.py
src/betstats/video/: __init__.py  props.py  publish.py  sfx.py  tts.py
tests/: __init__.py  builders.py  test_angles.py  test_brasileirao.py  test_contrast.py  test_elo.py  test_features.py  test_i18n.py  test_invariants.py  test_jsonutil.py  test_markets.py  test_models.py  test_trace.py  test_validate.py
video/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
video/src/: BetVideo.tsx  Root.tsx  Thumbnail.tsx  fit.ts  types.ts
video/src/components/: Background.tsx  Branding.tsx  Captions.tsx  Crests.tsx  StatCard.tsx
