[project]
name = "betstats"
version = "0.1.0"
description = "Motor de curiosidades estatísticas de futebol para TikTok (V1: Copa do Mundo)"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.69",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
]

[tool.setuptools.packages.find]
where = ["src"]
